@@ -35,16 +35,21 @@ import com.google.common.hash.HashCode;
 import com.google.common.hash.HashFunction;
 import com.google.common.hash.Hashing;
 import com.google.common.hash.HashingOutputStream;
-import com.google.common.io.ByteStreams;
 import com.google.gson.Gson;
-
-import java.io.*;
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.File;
+import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.OutputStream;
 import java.lang.management.ManagementFactory;
 import java.lang.management.RuntimeMXBean;
-import java.net.HttpURLConnection;
 import java.net.URI;
-import java.net.URL;
-import java.net.URLConnection;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.nio.file.Files;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
@@ -69,35 +74,35 @@ import java.util.function.IntConsumer;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.zip.GZIPInputStream;
-import javax.annotation.Nullable;
-import javax.swing.*;
-
+import javax.swing.SwingUtilities;
 import joptsimple.OptionException;
 import joptsimple.OptionParser;
 import joptsimple.OptionSet;
 import lombok.extern.slf4j.Slf4j;
-import net.runelite.launcher.beans.*;
-import net.runelite.launcher.mutli.FontManager;
-import net.runelite.launcher.mutli.SplashScreenMultipleOptions;
+import net.runelite.launcher.beans.Artifact;
+import net.runelite.launcher.beans.Bootstrap;
+import net.runelite.launcher.beans.Diff;
+import net.runelite.launcher.beans.Platform;
 import org.slf4j.LoggerFactory;
 
 @Slf4j
 public class Launcher
 {
-	private static final File RUNELITE_DIR = new File(System.getProperty("user.home"), "." + LauncherProperties.getApplicationName());
-	public static final File LOGS_DIR = new File(RUNELITE_DIR, "logs");
+	static final File RUNELITE_DIR = new File(System.getProperty("user.home"), "." + LauncherProperties.getNameLower());
+	static final File LOGS_DIR = new File(RUNELITE_DIR, "logs");
+	static final File REPO_DIR = new File(RUNELITE_DIR, "repository2");
 	public static final File CRASH_FILES = new File(LOGS_DIR, "jvm_crash_pid_%p.log");
-	private static final String USER_AGENT = LauncherProperties.getApplicationName() + "/" + LauncherProperties.getVersion();
-	static final String LAUNCHER_EXECUTABLE_NAME_WIN = LauncherProperties.getApplicationName() + ".exe";
-	static final String LAUNCHER_EXECUTABLE_NAME_OSX = LauncherProperties.getApplicationName();
-	public static String forcedJava = "";
+	private static final String USER_AGENT = "RuneLite/" + LauncherProperties.getVersion();
+	static final String LAUNCHER_EXECUTABLE_NAME_WIN = LauncherProperties.getName() + ".exe";
+	static final String LAUNCHER_EXECUTABLE_NAME_OSX = LauncherProperties.getName();
+	static boolean nativesLoaded;
 
-	static HashMap<String, ClientType> clientTypes = new HashMap<>();
+	private static HttpClient httpClient;
 
-	public static boolean displayMultipleOptions = false;
-
-	public static void main(String[] args)
+	private static OptionSet parseArgs(String[] args)
 	{
+		args = parseApplicationURI(args);
+
 		OptionParser parser = new OptionParser(false);
 		parser.allowsUnrecognizedOptions();
 		parser.accepts("postinstall", "Perform post-install tasks");
@@ -111,14 +116,14 @@ public class Launcher
 		parser.accepts("J", "JVM argument (FORK or JVM launch mode only)").withRequiredArg();
 		parser.accepts("configure", "Opens configuration GUI");
 		parser.accepts("launch-mode", "JVM launch method (JVM, FORK, REFLECT)")
-				.withRequiredArg()
-				.ofType(LaunchMode.class);
+			.withRequiredArg()
+			.ofType(LaunchMode.class);
 		parser.accepts("hw-accel", "Java 2D hardware acceleration mode (OFF, DIRECTDRAW, OPENGL, METAL)")
-				.withRequiredArg()
-				.ofType(HardwareAccelerationMode.class);
+			.withRequiredArg()
+			.ofType(HardwareAccelerationMode.class);
 		parser.accepts("mode", "Alias of hw-accel")
-				.withRequiredArg()
-				.ofType(HardwareAccelerationMode.class);
+			.withRequiredArg()
+			.ofType(HardwareAccelerationMode.class);
 
 		if (OS.getOs() == OS.OSType.MacOS)
 		{
@@ -135,8 +140,8 @@ public class Launcher
 		{
 			log.error("unable to parse arguments", ex);
 			SwingUtilities.invokeLater(() ->
-					new FatalErrorDialog("{name} was unable to parse the provided application arguments: " + ex.getMessage())
-							.open());
+				new FatalErrorDialog(LauncherProperties.getName() + " was unable to parse the provided application arguments: " + ex.getMessage())
+					.open());
 			throw ex;
 		}
 
@@ -152,6 +157,27 @@ public class Launcher
 			}
 			System.exit(0);
 		}
+
+		return options;
+	}
+
+	private static String[] parseApplicationURI(String[] args)
+	{
+		// runelite-jav://oldschool2.runescape.com:80/jav_config.ws
+		if (args.length > 0 && args[0].startsWith("runelite-jav://"))
+		{
+			log.info("Launched using URI {}", args[0]);
+			return new String[]{
+				"--jav_config", args[0].replace("runelite-jav", "http")
+			};
+		}
+
+		return args;
+	}
+
+	public static void main(String[] args)
+	{
+		final OptionSet options = parseArgs(args);
 
 		if (options.has("configure"))
 		{
@@ -172,8 +198,6 @@ public class Launcher
 			logger.setLevel(Level.DEBUG);
 		}
 
-		retrieveClientTypes();
-
 		initDll();
 
 		// RTSS triggers off of the CreateWindow event, so this needs to be in place early, prior to splash screen
@@ -185,19 +209,15 @@ public class Launcher
 			{
 				TrustManagerUtil.setupTrustManager();
 
-				String clientName = clientTypes.entrySet().stream().findAny().get().getValue().getName();
-
-				File location = new File(RUNELITE_DIR, "repository/" + clientName + "/");
-
 				// being called from ForkLauncher. All JVM options are already set.
-				String classpathOpt = String.valueOf(options.valueOf("classpath"));
-				List<File> classpath = Streams.stream(Splitter.on(File.pathSeparatorChar)
-								.split(classpathOpt))
-						.map(name -> new File(location, name))
-						.collect(Collectors.toList());
+				var classpathOpt = String.valueOf(options.valueOf("classpath"));
+				var classpath = Streams.stream(Splitter.on(File.pathSeparatorChar)
+					.split(classpathOpt))
+					.map(name -> new File(REPO_DIR, name))
+					.collect(Collectors.toList());
 				try
 				{
-					ReflectionLauncher.launch(classpath, getClientArgs(settings),clientTypes.entrySet().stream().findAny().get().getValue().getName());
+					ReflectionLauncher.launch(classpath, getClientArgs(settings));
 				}
 				catch (Exception e)
 				{
@@ -219,8 +239,8 @@ public class Launcher
 				jvmProps.put("sun.java2d.uiScale", Double.toString(settings.scale));
 			}
 
-			final HardwareAccelerationMode hardwareAccelMode = settings.hardwareAccelerationMode == HardwareAccelerationMode.AUTO ?
-					HardwareAccelerationMode.defaultMode(OS.getOs()) : settings.hardwareAccelerationMode;
+			final var hardwareAccelMode = settings.hardwareAccelerationMode == HardwareAccelerationMode.AUTO ?
+				HardwareAccelerationMode.defaultMode(OS.getOs()) : settings.hardwareAccelerationMode;
 			jvmProps.putAll(hardwareAccelMode.toParams(OS.getOs()));
 
 			// As of JDK-8243269 (11.0.8) and JDK-8235363 (14), AWT makes macOS dark mode support opt-in so interfaces
@@ -239,7 +259,7 @@ public class Launcher
 				jvmProps.put("runelite.insecure-skip-tls-verification", "true");
 			}
 
-			log.info(LauncherProperties.getApplicationName() + " Launcher version {}", LauncherProperties.getVersion());
+			log.info("RuneLite Launcher version {}", LauncherProperties.getVersion());
 			log.info("Launcher configuration:" + System.lineSeparator() + "{}", settings.configurationStr());
 			log.info("OS name: {}, version: {}, arch: {}", System.getProperty("os.name"), System.getProperty("os.version"), System.getProperty("os.arch"));
 			log.info("Using hardware acceleration mode: {}", hardwareAccelMode);
@@ -250,72 +270,27 @@ public class Launcher
 			if (settings.isSkipTlsVerification())
 			{
 				TrustManagerUtil.setupInsecureTrustManager();
+				// This is the only way to disable hostname verification with HttpClient - https://stackoverflow.com/a/52995420
+				System.setProperty("jdk.internal.httpclient.disableHostnameVerification", Boolean.TRUE.toString());
 			}
 			else
 			{
 				TrustManagerUtil.setupTrustManager();
 			}
 
-			if (displayMultipleOptions)
-			{
-				FontManager.init();
+			// setup http client after the default SSLContext is set
+			httpClient = HttpClient.newBuilder()
+				.followRedirects(HttpClient.Redirect.ALWAYS)
+				.build();
 
-				List<JButton> buttons = new ArrayList<>();
-
-				for (Map.Entry<String, ClientType> type : clientTypes.entrySet())
-				{
-					JButton button = SplashScreenMultipleOptions.addButton(toTitleCase(type.getKey()), type.getValue().getTooltip());
-					button.addActionListener(e ->
-					{
-						Runnable task = () -> launch(toTitleCase(type.getKey()), args, settings,jvmProps,postInstall);
-						Thread thread = new Thread(task);
-						thread.start();
-					});
-					buttons.add(button);
-				}
-
-				SplashScreenMultipleOptions.init(buttons);
-				SplashScreenMultipleOptions.barMessage(null);
-				SplashScreenMultipleOptions.message(null);
-
-			}
-			else
-			{
-				SplashScreen.init();
-				Runnable task = () -> launch(toTitleCase(clientTypes.entrySet().stream().findAny().get().getValue().getName()), args, settings,jvmProps,postInstall);
-				Thread thread = new Thread(task);
-				thread.start();
-			}
-		}
-		catch (Exception e)
-		{
-			log.error("Failure during startup", e);
-			if (!postInstall)
-			{
-				SwingUtilities.invokeLater(() ->
-						new FatalErrorDialog("{name} has encountered an unexpected error during startup.")
-								.open());
-			}
-		}
-		catch (Error e)
-		{
-			// packr seems to eat exceptions thrown out of main, so at least try to log it
-			log.error("Failure during startup", e);
-			throw e;
-		}
-	}
-
-	public static void launch(String type, String[] args, LauncherSettings settings, Map<String, String> jvmProps, boolean postInstall) {
-		try {
 			if (postInstall)
 			{
-				postInstall(type);
+				postInstall(settings);
 				return;
 			}
 
-			File location = new File(RUNELITE_DIR, "repository/" + type + "/");
-
-			stage(0, "Preparing", "Setting up environment");
+			SplashScreen.init();
+			SplashScreen.stage(0, "Preparing", "Setting up environment");
 
 			// Print out system info
 			if (log.isDebugEnabled())
@@ -338,11 +313,31 @@ public class Launcher
 				}
 			}
 
-			stage(.05, null, "Downloading bootstrap");
+			// fix up permissions before potentially removing the RUNASADMIN compat key
+			if (FilesystemPermissions.check())
+			{
+				// check() opens an error dialog
+				return;
+			}
+
+			if (JagexLauncherCompatibility.check())
+			{
+				// check() opens an error dialog
+				return;
+			}
+
+			if (!REPO_DIR.exists() && !REPO_DIR.mkdirs())
+			{
+				log.error("unable to create directory {}", REPO_DIR);
+				SwingUtilities.invokeLater(() -> new FatalErrorDialog("Unable to create RuneLite directory " + REPO_DIR.getAbsolutePath() + ". Check your filesystem permissions are correct.").open());
+				return;
+			}
+
+			SplashScreen.stage(.05, null, "Downloading bootstrap");
 			Bootstrap bootstrap;
 			try
 			{
-				bootstrap = getBootstrap(type);
+				bootstrap = getBootstrap();
 			}
 			catch (IOException | VerificationException | CertificateException | SignatureException | InvalidKeyException | NoSuchAlgorithmException ex)
 			{
@@ -358,11 +353,11 @@ public class Launcher
 				return;
 			}
 
-			stage(.07, null, "Checking for updates");
+			SplashScreen.stage(.07, null, "Checking for updates");
 
 			Updater.update(bootstrap, settings, args);
 
-			stage(.10, null, "Tidying the cache");
+			SplashScreen.stage(.10, null, "Tidying the cache");
 
 			if (jvmOutdated(bootstrap))
 			{
@@ -371,63 +366,44 @@ public class Launcher
 			}
 
 			// update packr vmargs to the launcher vmargs from bootstrap.
-			PackrConfig.updateLauncherArgs(bootstrap);
-
-			if (!location.exists() && !location.mkdirs())
-			{
-				log.error("unable to create repo directory {}", location);
-				SwingUtilities.invokeLater(() -> new FatalErrorDialog("Unable to create {name} directory " + location.getAbsolutePath() + ". Check your filesystem permissions are correct.").open());
-				return;
-			}
-
-
-			String version = getJavaRuntimeVersion();
-			int majorVersion = getMajorJavaVersion(version);
-
-			if (majorVersion < 11) {
-				log.info("User using below java 11");
-				stage(.05, null, "Checking Java Version");
-				JavaInstaller.init();
-			} else {
-				log.info("User using 11 or above");
-			}
+			PackrConfig.updateLauncherArgs(bootstrap, settings);
 
 			// Determine artifacts for this OS
 			List<Artifact> artifacts = Arrays.stream(bootstrap.getArtifacts())
-					.filter(a ->
+				.filter(a ->
+				{
+					if (a.getPlatform() == null)
 					{
-						if (a.getPlatform() == null)
+						return true;
+					}
+
+					final String os = System.getProperty("os.name");
+					final String arch = System.getProperty("os.arch");
+					for (Platform platform : a.getPlatform())
+					{
+						if (platform.getName() == null)
+						{
+							continue;
+						}
+
+						OS.OSType platformOs = OS.parseOs(platform.getName());
+						if ((platformOs == OS.OSType.Other ? platform.getName().equals(os) : platformOs == OS.getOs())
+							&& (platform.getArch() == null || platform.getArch().equals(arch)))
 						{
 							return true;
 						}
+					}
 
-						final String os = System.getProperty("os.name");
-						final String arch = System.getProperty("os.arch");
-						for (Platform platform : a.getPlatform())
-						{
-							if (platform.getName() == null)
-							{
-								continue;
-							}
-
-							OS.OSType platformOs = OS.parseOs(platform.getName());
-							if ((platformOs == OS.OSType.Other ? platform.getName().equals(os) : platformOs == OS.getOs())
-									&& (platform.getArch() == null || platform.getArch().equals(arch)))
-							{
-								return true;
-							}
-						}
-
-						return false;
-					})
-					.collect(Collectors.toList());
+					return false;
+				})
+				.collect(Collectors.toList());
 
 			// Clean out old artifacts from the repository
-			clean(artifacts,type);
+			clean(artifacts);
 
 			try
 			{
-				download(artifacts, settings.isNodiffs(),type);
+				download(artifacts, settings.isNodiffs());
 			}
 			catch (IOException ex)
 			{
@@ -436,10 +412,10 @@ public class Launcher
 				return;
 			}
 
-			stage(.80, null, "Verifying");
+			SplashScreen.stage(.80, null, "Verifying");
 			try
 			{
-				verifyJarHashes(artifacts,type);
+				verifyJarHashes(artifacts);
 			}
 			catch (VerificationException ex)
 			{
@@ -449,11 +425,11 @@ public class Launcher
 			}
 
 			final Collection<String> clientArgs = getClientArgs(settings);
-			stage(.90, "Starting the client", "");
+			SplashScreen.stage(.90, "Starting the client", "");
 
-			List<File> classpath = artifacts.stream()
-					.map(dep -> new File(location, dep.getName()))
-					.collect(Collectors.toList());
+			var classpath = artifacts.stream()
+				.map(dep -> new File(REPO_DIR, dep.getName()))
+				.collect(Collectors.toList());
 
 			List<String> jvmParams = new ArrayList<>();
 			// Set hs_err_pid location. This is a jvm param and can't be set at runtime.
@@ -465,7 +441,7 @@ public class Launcher
 			if (settings.launchMode == LaunchMode.REFLECT)
 			{
 				log.debug("Using launch mode: REFLECT");
-				ReflectionLauncher.launch(classpath, clientArgs,"");
+				ReflectionLauncher.launch(classpath, clientArgs);
 			}
 			else if (settings.launchMode == LaunchMode.FORK || (settings.launchMode == LaunchMode.AUTO && ForkLauncher.canForkLaunch()))
 			{
@@ -474,8 +450,6 @@ public class Launcher
 			}
 			else
 			{
-
-
 				if (System.getenv("APPIMAGE") != null)
 				{
 					// java.home is in the appimage, so we can never use the jvm launcher
@@ -484,15 +458,17 @@ public class Launcher
 
 				// launch mode JVM or AUTO outside of packr
 				log.debug("Using launch mode: JVM");
-				JvmLauncher.launch(bootstrap, classpath, clientArgs, jvmProps, jvmParams,type);
+				JvmLauncher.launch(bootstrap, classpath, clientArgs, jvmProps, jvmParams);
 			}
-		} catch (Exception e) {
+		}
+		catch (Exception e)
+		{
 			log.error("Failure during startup", e);
 			if (!postInstall)
 			{
 				SwingUtilities.invokeLater(() ->
-						new FatalErrorDialog("{name} has encountered an unexpected error during startup.")
-								.open());
+					new FatalErrorDialog("RuneLite has encountered an unexpected error during startup.")
+						.open());
 			}
 		}
 		catch (Error e)
@@ -503,31 +479,9 @@ public class Launcher
 		}
 		finally
 		{
-			close();
+			SplashScreen.stop();
 		}
 	}
-
-	private static String getJavaRuntimeVersion() {
-		RuntimeMXBean runtimeMXBean = ManagementFactory.getRuntimeMXBean();
-		return runtimeMXBean.getSpecVersion();
-	}
-
-	private static int getMajorJavaVersion(String version) {
-		String[] versionElements = version.split("\\.");
-
-		int majorVersion;
-		if (version.startsWith("1.")) {
-			// Versions like 1.8.0_271
-			majorVersion = Integer.parseInt(versionElements[1]);
-		} else {
-			// Versions like 9, 10, 11, 12, 13, ...
-			majorVersion = Integer.parseInt(versionElements[0]);
-		}
-
-		return majorVersion;
-	}
-
-
 
 	private static void setJvmParams(final Map<String, String> params)
 	{
@@ -537,113 +491,95 @@ public class Launcher
 		}
 	}
 
-	public static String toTitleCase(String givenString)
+	private static Bootstrap getBootstrap() throws IOException, CertificateException, NoSuchAlgorithmException, InvalidKeyException, SignatureException, VerificationException
 	{
-		String[] arr = givenString.split(" ");
-		StringBuffer sb = new StringBuffer();
+		HttpRequest bootstrapReq = HttpRequest.newBuilder()
+			.uri(URI.create(LauncherProperties.getBootstrap()))
+			.header("User-Agent", USER_AGENT)
+			.GET()
+			.build();
 
-		for (int i = 0; i < arr.length; i++)
-		{
-			sb.append(Character.toUpperCase(arr[i].charAt(0)))
-					.append(arr[i].substring(1)).append(" ");
-		}
-		return sb.toString().trim();
-	}
+		HttpRequest bootstrapSigReq = HttpRequest.newBuilder()
+			.uri(URI.create(LauncherProperties.getBootstrapSig()))
+			.header("User-Agent", USER_AGENT)
+			.GET()
+			.build();
 
-	public static void retrieveClientTypes()
-	{
+		HttpResponse<byte[]> bootstrapResp, bootstrapSigResp;
 
 		try
 		{
-			ClientType[] types = getClientManifest();
-			for (ClientType type : types)
-			{
-				clientTypes.put(type.getName(), type);
-			}
+			bootstrapResp = httpClient.send(bootstrapReq, HttpResponse.BodyHandlers.ofByteArray());
+			bootstrapSigResp = httpClient.send(bootstrapSigReq, HttpResponse.BodyHandlers.ofByteArray());
 		}
-		catch (Exception ex)
+		catch (InterruptedException ex)
 		{
-			log.error("error fetching client types", ex);
-			SwingUtilities.invokeLater(() -> FatalErrorDialog.showNetErrorWindow("No Clients Found", new Exception("No Clients Found")));
+			throw new IOException(ex);
 		}
-		if (clientTypes.size() == 0)
+
+		if (bootstrapResp.statusCode() != 200)
 		{
-			log.error("No Clients Found");
-			SwingUtilities.invokeLater(() -> FatalErrorDialog.showNetErrorWindow("No Clients Found", new Exception("No Clients Found")));
+			throw new IOException("Unable to download bootstrap (status code " + bootstrapResp.statusCode() + "): " + new String(bootstrapResp.body()));
 		}
-		else
+
+		if (bootstrapSigResp.statusCode() != 200)
 		{
-			displayMultipleOptions = clientTypes.size() != 1;
+			throw new IOException("Unable to download bootstrap signature (status code " + bootstrapSigResp.statusCode() + "): " + new String(bootstrapSigResp.body()));
 		}
-	}
 
-	private static ClientType[] getClientManifest() throws IOException {
-		HttpRequestManager httpRequestManager = new HttpRequestManager();
-		String manifestUrl = LauncherProperties.getRuneliteTypeManifest();
-
-		byte[] manifestBytes = httpRequestManager.sendGet(manifestUrl);
-
-		Gson gson = new Gson();
-		ClientType[] manifest = gson.fromJson(new InputStreamReader(new ByteArrayInputStream(manifestBytes)), ClientType[].class);
-		System.out.println("Parsed manifest with " + manifest.length + " entries");
-
-		return manifest;
-	}
-
-	public static Bootstrap getBootstrap(String type) throws IOException, CertificateException,
-			NoSuchAlgorithmException, InvalidKeyException, SignatureException, VerificationException {
-		HttpRequestManager httpRequestManager = new HttpRequestManager();
-
-		byte[] bootstrapBytes = httpRequestManager.sendGet(clientTypes.get(type).getBootstrap());
-		byte[] signatureBytes = httpRequestManager.sendGet(clientTypes.get(type).getBootstrapsig());
+		final byte[] bytes = bootstrapResp.body();
+		final byte[] signature = bootstrapSigResp.body();
 
 		Certificate certificate = getCertificate();
 		Signature s = Signature.getInstance("SHA256withRSA");
 		s.initVerify(certificate);
-		s.update(bootstrapBytes);
+		s.update(bytes);
 
-		if (!s.verify(signatureBytes)) {
+		if (!s.verify(signature))
+		{
 			throw new VerificationException("Unable to verify bootstrap signature");
 		}
 
-		Gson gson = new Gson();
-		return gson.fromJson(new InputStreamReader(new ByteArrayInputStream(bootstrapBytes)), Bootstrap.class);
+		Gson g = new Gson();
+		return g.fromJson(new InputStreamReader(new ByteArrayInputStream(bytes)), Bootstrap.class);
 	}
 
 	private static boolean jvmOutdated(Bootstrap bootstrap)
 	{
 		boolean launcherTooOld = bootstrap.getRequiredLauncherVersion() != null &&
-				compareVersion(bootstrap.getRequiredLauncherVersion(), LauncherProperties.getVersion()) > 0;
+			compareVersion(bootstrap.getRequiredLauncherVersion(), LauncherProperties.getVersion()) > 0;
 
 		boolean jvmTooOld = false;
-		try {
-			if (bootstrap.getRequiredJVMVersion() != null) {
-				String requiredJVMVersion = bootstrap.getRequiredJVMVersion();
-				String currentJVMVersion = System.getProperty("java.version");
-				jvmTooOld = compareVersion(requiredJVMVersion, currentJVMVersion) > 0;
+		try
+		{
+			if (bootstrap.getRequiredJVMVersion() != null)
+			{
+				jvmTooOld = Runtime.Version.parse(bootstrap.getRequiredJVMVersion())
+					.compareTo(Runtime.version()) > 0;
 			}
-		} catch (Exception e) {
+		}
+		catch (IllegalArgumentException e)
+		{
 			log.warn("Unable to parse bootstrap version", e);
 		}
-
 
 		if (launcherTooOld)
 		{
 			SwingUtilities.invokeLater(() ->
-					new FatalErrorDialog("Your launcher is too old to start {name}. Please download and install a more " +
-							"recent one from {link}.")
-							.addButton("{link}", () -> LinkBrowser.browse(LauncherProperties.getDownloadLink()))
-							.open());
+				new FatalErrorDialog("Your launcher is too old to start RuneLite. Please download and install a more " +
+					"recent one from " + LauncherProperties.getWebsite() + ".")
+					.addButton(LauncherProperties.getWebsite(), () -> LinkBrowser.browse(LauncherProperties.getDownloadLink()))
+					.open());
 			return true;
 		}
 		if (jvmTooOld)
 		{
 			SwingUtilities.invokeLater(() ->
-					new FatalErrorDialog("Your Java installation is too old. {name} now requires Java " +
-							bootstrap.getRequiredJVMVersion() + " to run. You can get a platform specific version from {link}," +
-							" or install a newer version of Java.")
-							.addButton("{link}", () -> LinkBrowser.browse(LauncherProperties.getDownloadLink()))
-							.open());
+				new FatalErrorDialog("Your Java installation is too old. " + LauncherProperties.getName() + " now requires Java " +
+					bootstrap.getRequiredJVMVersion() + " to run. You can get a platform specific version from " + LauncherProperties.getWebsite() + " ," +
+					" or install a newer version of Java.")
+					.addButton(LauncherProperties.getWebsite(), () -> LinkBrowser.browse(LauncherProperties.getDownloadLink()))
+					.open());
 			return true;
 		}
 
@@ -652,15 +588,15 @@ public class Launcher
 
 	private static Collection<String> getClientArgs(LauncherSettings settings)
 	{
-		final ArrayList<String> args = new ArrayList<>(settings.clientArguments);
+		final var args = new ArrayList<>(settings.clientArguments);
 
-		String clientArgs = System.getenv(LauncherProperties.getApplicationName().toUpperCase() + "_ARGS");
+		String clientArgs = System.getenv("RUNELITE_ARGS");
 		if (!Strings.isNullOrEmpty(clientArgs))
 		{
 			args.addAll(Splitter.on(' ')
-					.omitEmptyStrings()
-					.trimResults()
-					.splitToList(clientArgs));
+				.omitEmptyStrings()
+				.trimResults()
+				.splitToList(clientArgs));
 		}
 
 		if (settings.debug)
@@ -678,23 +614,27 @@ public class Launcher
 
 	private static List<String> getJvmArgs(LauncherSettings settings)
 	{
-		List<String> args = new ArrayList<>(settings.jvmArguments);
+		var args = new ArrayList<>(settings.jvmArguments);
 
-		String envArgs = System.getenv(LauncherProperties.getApplicationName().toUpperCase() + "_VMARGS");
+		if (settings.ipv4)
+		{
+			args.add("-Djava.net.preferIPv4Stack=true");
+		}
+
+		var envArgs = System.getenv("RUNELITE_VMARGS");
 		if (!Strings.isNullOrEmpty(envArgs))
 		{
 			args.addAll(Splitter.on(' ')
-					.omitEmptyStrings()
-					.trimResults()
-					.splitToList(envArgs));
+				.omitEmptyStrings()
+				.trimResults()
+				.splitToList(envArgs));
 		}
 
 		return args;
 	}
 
-	private static void download(List<Artifact> artifacts, boolean nodiff, String type) throws IOException
+	private static void download(List<Artifact> artifacts, boolean nodiff) throws IOException
 	{
-		File location = new File(RUNELITE_DIR, "repository/" + type + "/");
 		List<Artifact> toDownload = new ArrayList<>(artifacts.size());
 		Map<Artifact, Diff> diffs = new HashMap<>();
 		int totalDownloadBytes = 0;
@@ -708,7 +648,7 @@ public class Launcher
 
 		for (Artifact artifact : artifacts)
 		{
-			File dest = new File(location, artifact.getName());
+			File dest = new File(REPO_DIR, artifact.getName());
 
 			String hash;
 			try
@@ -738,7 +678,7 @@ public class Launcher
 			{
 				for (Diff diff : artifact.getDiffs())
 				{
-					File old = new File(location, diff.getFrom());
+					File old = new File(REPO_DIR, diff.getFrom());
 
 					String oldhash;
 					try
@@ -765,11 +705,11 @@ public class Launcher
 
 		final double START_PROGRESS = .15;
 		int downloaded = 0;
-		stage(START_PROGRESS, "Downloading", "");
+		SplashScreen.stage(START_PROGRESS, "Downloading", "");
 
 		for (Artifact artifact : toDownload)
 		{
-			File dest = new File(location, artifact.getName());
+			File dest = new File(REPO_DIR, artifact.getName());
 			final int total = downloaded;
 
 			// Check if there is a diff we can download instead
@@ -783,14 +723,14 @@ public class Launcher
 					ByteArrayOutputStream out = new ByteArrayOutputStream();
 					final int totalBytes = totalDownloadBytes;
 					download(diff.getPath(), diff.getHash(), (completed) ->
-									stage(START_PROGRESS, .80, null, diff.getName(), total + completed, totalBytes, true),
-							out);
+						SplashScreen.stage(START_PROGRESS, .80, null, diff.getName(), total + completed, totalBytes, true),
+						out);
 					downloaded += diff.getSize();
 
-					File old = new File(location, diff.getFrom());
+					File old = new File(REPO_DIR, diff.getFrom());
 					HashCode hash;
 					try (InputStream patchStream = new GZIPInputStream(new ByteArrayInputStream(out.toByteArray()));
-						 HashingOutputStream fout = new HashingOutputStream(Hashing.sha256(), Files.newOutputStream(dest.toPath())))
+						HashingOutputStream fout = new HashingOutputStream(Hashing.sha256(), Files.newOutputStream(dest.toPath())))
 					{
 						new FileByFileV1DeltaApplier().applyDelta(old, patchStream, fout);
 						hash = fout.hash();
@@ -821,8 +761,8 @@ public class Launcher
 			{
 				final int totalBytes = totalDownloadBytes;
 				download(artifact.getPath(), artifact.getHash(), (completed) ->
-								stage(START_PROGRESS, .80, null, artifact.getName(), total + completed, totalBytes, true),
-						fout);
+					SplashScreen.stage(START_PROGRESS, .80, null, artifact.getName(), total + completed, totalBytes, true),
+					fout);
 				downloaded += artifact.getSize();
 			}
 			catch (VerificationException e)
@@ -832,10 +772,9 @@ public class Launcher
 		}
 	}
 
-	private static void clean(List<Artifact> artifacts,String type)
+	private static void clean(List<Artifact> artifacts)
 	{
-		File location = new File(RUNELITE_DIR, "repository/" + type + "/");
-		File[] existingFiles = location.listFiles();
+		File[] existingFiles = REPO_DIR.listFiles();
 
 		if (existingFiles == null)
 		{
@@ -872,16 +811,15 @@ public class Launcher
 		}
 	}
 
-	private static void verifyJarHashes(List<Artifact> artifacts, String type) throws VerificationException
+	private static void verifyJarHashes(List<Artifact> artifacts) throws VerificationException
 	{
-		File location = new File(RUNELITE_DIR, "repository/" + type + "/");
 		for (Artifact artifact : artifacts)
 		{
 			String expectedHash = artifact.getHash();
 			String fileHash;
 			try
 			{
-				fileHash = hash(new File(location, artifact.getName()));
+				fileHash = hash(new File(REPO_DIR, artifact.getName()));
 			}
 			catch (IOException e)
 			{
@@ -907,70 +845,86 @@ public class Launcher
 	private static Certificate getCertificate() throws CertificateException
 	{
 		CertificateFactory certFactory = CertificateFactory.getInstance("X.509");
-		Certificate certificate = certFactory.generateCertificate(Launcher.class.getResourceAsStream("launcher.crt"));
+		Certificate certificate = certFactory.generateCertificate(Launcher.class.getResourceAsStream("runelite.crt"));
 		return certificate;
 	}
 
-	static int compareVersion(String a, String b) {
+	static int compareVersion(String a, String b)
+	{
 		Pattern tok = Pattern.compile("[^0-9a-zA-Z]");
-		String[] tokensA = tok.split(a);
-		String[] tokensB = tok.split(b);
-
-		int minLength = Math.min(tokensA.length, tokensB.length);
-
-		for (int i = 0; i < minLength; i++) {
-			String tokenA = tokensA[i];
-			String tokenB = tokensB[i];
-
-			Integer intA = null;
-			Integer intB = null;
-
-			try {
-				intA = Integer.parseInt(tokenA);
-			} catch (NumberFormatException ignored) {}
-
-			try {
-				intB = Integer.parseInt(tokenB);
-			} catch (NumberFormatException ignored) {}
-
-			if (intA != null && intB != null) {
-				int compareInt = intA.compareTo(intB);
-				if (compareInt != 0) {
-					return compareInt;
-				}
-			} else if (intA != null) {
-				return 1;
-			} else if (intB != null) {
-				return -1;
-			} else {
-				int compareToken = tokenA.compareToIgnoreCase(tokenB);
-				if (compareToken != 0) {
-					return compareToken;
-				}
+		return Arrays.compare(tok.split(a), tok.split(b), (x, y) ->
+		{
+			Integer ix = null;
+			try
+			{
+				ix = Integer.parseInt(x);
 			}
-		}
+			catch (NumberFormatException e)
+			{
+			}
 
-		return Integer.compare(tokensA.length, tokensB.length);
+			Integer iy = null;
+			try
+			{
+				iy = Integer.parseInt(y);
+			}
+			catch (NumberFormatException e)
+			{
+			}
+
+			if (ix == null && iy == null)
+			{
+				return x.compareToIgnoreCase(y);
+			}
+
+			if (ix == null)
+			{
+				return -1;
+			}
+			if (iy == null)
+			{
+				return 1;
+			}
+
+			if (ix > iy)
+			{
+				return 1;
+			}
+			if (ix < iy)
+			{
+				return -1;
+			}
+
+			return 0;
+		});
 	}
-
 
 	static void download(String path, String hash, IntConsumer progress, OutputStream out) throws IOException, VerificationException
 	{
-		URL url = new URL(path);
-		HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-		conn.setRequestProperty("User-Agent", USER_AGENT);
-		conn.getResponseCode();
+		HttpRequest request = HttpRequest.newBuilder()
+			.uri(URI.create(path))
+			.header("User-Agent", USER_AGENT)
+			.GET()
+			.build();
 
-		InputStream err = conn.getErrorStream();
-		if (err != null)
+		HttpResponse<InputStream> response;
+		try
 		{
-			err.close();
-			throw new IOException("Unable to download " + path + " - " + conn.getResponseMessage());
+			response = httpClient.send(request, HttpResponse.BodyHandlers.ofInputStream());
+		}
+		catch (InterruptedException ex)
+		{
+			throw new IOException(ex);
+		}
+
+		if (response.statusCode() != 200)
+		{
+			throw new IOException("Unable to download " + path + " (status code " + response.statusCode() + ")");
 		}
 
 		int downloaded = 0;
 		HashingOutputStream hout = new HashingOutputStream(Hashing.sha256(), out);
-		try (InputStream in = conn.getInputStream())
+		try (InputStream in = response.body())
 		{
 			int i;
 			byte[] buffer = new byte[1024 * 1024];
@@ -989,18 +943,18 @@ public class Launcher
 		}
 	}
 
-	static boolean isJava17() {
-		// Check if the current Java version is 1.7 or greater
-		String version = System.getProperty("java.version");
-		return version.startsWith("1.") && Integer.parseInt(version.substring(2, 3)) >= 7;
+	static boolean isJava17()
+	{
+		// 16 has the same module restrictions as 17, so we'll use the 17 settings for it
+		return Runtime.version().feature() >= 16;
 	}
 
-	private static void postInstall(String type)
+	private static void postInstall(LauncherSettings settings)
 	{
 		Bootstrap bootstrap;
 		try
 		{
-			bootstrap = getBootstrap(type);
+			bootstrap = getBootstrap();
 		}
 		catch (IOException | VerificationException | CertificateException | SignatureException | InvalidKeyException | NoSuchAlgorithmException ex)
 		{
@@ -1008,30 +962,36 @@ public class Launcher
 			return;
 		}
 
-		PackrConfig.updateLauncherArgs(bootstrap);
+		PackrConfig.updateLauncherArgs(bootstrap, settings);
 
 		log.info("Performed postinstall steps");
 	}
 
-	private static void initDll() {
-		if (OS.getOs() != OS.OSType.Windows) {
+	private static void initDll()
+	{
+		if (OS.getOs() != OS.OSType.Windows)
+		{
 			return;
 		}
 
 		String arch = System.getProperty("os.arch");
-		if (!("x86".equals(arch) || "amd64".equals(arch) || "aarch64".equals(arch))) {
+		if (!Set.of("x86", "amd64", "aarch64").contains(arch))
+		{
 			log.debug("System architecture is not supported for launcher natives: {}", arch);
 			return;
 		}
 
-		try {
+		try
+		{
 			System.loadLibrary("launcher_" + arch);
 			log.debug("Loaded launcher native launcher_{}", arch);
-		} catch (Error ex) {
+			nativesLoaded = true;
+		}
+		catch (Error ex)
+		{
 			log.debug("Error loading launcher native", ex);
 		}
 	}
-
 
 	private static void initDllBlacklist()
 	{
@@ -1058,42 +1018,13 @@ public class Launcher
 
 	static native String regQueryString(String subKey, String value);
 
-	public static void stage(double startProgress, double endProgress, @Nullable String actionText, String subActionText,
-							 int done, int total, boolean mib)
-	{
-		if (displayMultipleOptions)
-		{
-			SplashScreenMultipleOptions.stage(startProgress, endProgress, subActionText, done, total, mib);
-		}
-		else
-		{
-			SplashScreen.stage(startProgress, endProgress,
-					actionText, subActionText, done, total, mib);
-		}
-	}
+	// Requires elevated permissions. Current valid inputs for key are: "HKCU" and "HKLM"
+	static native boolean regDeleteValue(String key, String subKey, String value);
 
-	public static void stage(double overallProgress, @Nullable String actionText, String subActionText)
-	{
-		if (displayMultipleOptions)
-		{
-			SplashScreenMultipleOptions.stage(overallProgress, subActionText);
-		}
-		else
-		{
-			SplashScreen.stage(overallProgress, actionText, subActionText);
-		}
-	}
+	static native boolean isProcessElevated(long pid);
 
-	public static void close()
-	{
-		if (displayMultipleOptions)
-		{
-			SplashScreenMultipleOptions.close();
-		}
-		else
-		{
-			SplashScreen.stop();
-		}
-	}
+	static native void setFileACL(String folder, String[] sids);
+	static native String getUserSID();
 
+	static native long runas(String path, String args);
 }
